# basis

./: .buildinfo  README.md  basis.py  genindex.html  index.html  introduction.html  objects.inv  persistence.html  py-modindex.html  pyproject.toml  requirements.txt  result.html  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  main.yml
_NEW/: .gitignore  LICENSE  README.md  setup.cfg
_NEW/essens-lite/: result.py  setup.cfg
_NEW/essens-tiny/: README.md  example1.py  requirements.txt
_NEW/src/essens/: __init__.py  common.py
_NEW/src/essens/core/: _configuration.py  _entities.py  _environment.py  _factories.py  _repositories.py  _service.py
_NEW/src/essens/docs/: _Diagram.py  _Documentation.py
_NEW/src/essens/messaging/: actor.py
_NEW/tests/: test_actor.py
__/: __init__.py  _configuration.py  _credentials.py  _entities.py  _environment.py  _factories.py  _repositories.py  _service.py  app.py  application.py  example1.py  test_main.py  wavelet.py
__resolve/: __init__.py  _facades.py  app.py  wavelet.py
_sources/: index.md.txt  index.rst.txt  persistence.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/actor/: index.rst.txt
_sources/autoapi/basis/: index.rst.txt
_sources/autoapi/basis/_async/: index.rst.txt
_sources/autoapi/basis/_project/: index.rst.txt
_sources/autoapi/basis/aggregate/: index.rst.txt
_sources/autoapi/basis/datetime/: index.rst.txt
_sources/autoapi/basis/environment/: index.rst.txt
_sources/autoapi/basis/monads/: index.rst.txt
_sources/autoapi/basis/monads_test/: index.rst.txt
_sources/autoapi/basis/network/: index.rst.txt
_sources/autoapi/basis/periods/: index.rst.txt
_sources/autoapi/basis/persistence/: index.rst.txt
_sources/autoapi/basis/protocols/: index.rst.txt
_sources/autoapi/basis/result/: index.rst.txt
_sources/autoapi/basis/transaction/: index.rst.txt
_sources/autoapi/message/: index.rst.txt
_sources/autoapi/service/: index.rst.txt
autoapi/: index.html
autoapi/actor/: index.html
autoapi/basis/: index.html
autoapi/basis/_async/: index.html
autoapi/basis/_project/: index.html
autoapi/basis/aggregate/: index.html
autoapi/basis/datetime/: index.html
autoapi/basis/environment/: index.html
autoapi/basis/monads/: index.html
autoapi/basis/monads_test/: index.html
autoapi/basis/network/: index.html
autoapi/basis/periods/: index.html
autoapi/basis/persistence/: index.html
autoapi/basis/protocols/: index.html
autoapi/basis/result/: index.html
autoapi/basis/transaction/: index.html
autoapi/basis/utilities/: index.html
autoapi/basis/values/: index.html
autoapi/message/: index.html
autoapi/service/: index.html
docs/: requirements.txt
docs/source/: conf.py  index.md  introduction.md  persistence.md  result.md
examples/blog/: README.md
resolve/: README.md  _credentials.py  test_main.py
src/basis/: __init__.py  _async.py  _project.py  _repositories.py  aggregate.py  datetime.py  environment.py  monads.py  monads_test.py  network.py  numbers.py  periods.py  persistence.py  protocols.py  transaction.py  tuples.py  values.py
src/basis/aggregate/: __init__.py
src/basis/messaging/: actor.py  message.py  service.py
src/basis/persistence/: __init__.py  _connection.py  _connector.py  _cursor.py  _entity.py  _examplerepo.py  _repository.py  _transaction.py  interface.py  repository.py  transaction.py
src/basis/result/: __init__.py  _internal.py
src/basis/utilities/: datetime.py  numbers.py  periods.py  tuples.py
tests/: repository_test.py  result_test.py
tests/persistence/: repository_memory_test.py  repostitory_rest_test.py
(+22 files in other folders)
