[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "basis"
authors = [
    {name="David Landa", email="david.landa@proton.me" }
]
maintainers = [
    {name="David Landa", email="david.landa@proton.me" }
]
description = "The ordering service bounded context."
dynamic = ["version", "readme"]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "psycopg",
    "psycopg_pool",
    "requests"
]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
include=["src/basis.*"]
namespaces = false

[tool.setuptools.package-data]
orders = ["*.sql"]

#[project.scripts]
#basis = "basis.__main__:main"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.ruff]
extend-include = ["*.ipynb"]

# Assume Python 3.12
target-version = "py310"

exclude = [
    "docs",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__",
]

[tool.pytest.ini_options]
markers = [
    "domain: marks tests as domain (deselect with '-m \"not domain\"')",
    "service",
]
testpaths = ["tests"]


[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
show_column_numbers = true
