[metadata]
name = essens
version = 0.1.0
author = David Landa
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
test = faker; pytest
lint = black; isort; flake8
docs = pdoc

# [options.entry_points]
# console_scripts =
#      = $name.__main__:main

# [tool.mypy]
# python_version = 3.9
# warn_return_any = True
# warn_unused_configs = True
