[metadata]
name = essence
version = 0.1.0
author = David Landa
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src

[options.extras_require]
test = faker; pytest
lint = black; isort; flake8
docs = pdoc
